@@ -30,6 +30,7 @@ jobs:
             6.0.x
             7.0.x
             8.0.x
+            9.0.x
 
       - name: Restore Dependencies
         run: dotnet restore
@@ -60,6 +61,7 @@ jobs:
             6.0.x
             7.0.x
             8.0.x
+            9.0.x
 
       - name: Publish
         run: |
