@@ -17,7 +17,7 @@
     </Description>
 
     <!-- Project setting -->
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <CodeAnalysisRuleSet>../../StyleCop.xml</CodeAnalysisRuleSet>
