@@ -15,7 +15,7 @@ the [Overview](#overview) section.<br>
 ![Build](https://github.com/dxFeed/dxfeed-graal-net-api/actions/workflows/build.yml/badge.svg)
 ![CodeQL](https://github.com/dxFeed/dxfeed-graal-net-api/actions/workflows/codeql.yml/badge.svg)
 ![Platform](https://img.shields.io/badge/platform-win--x64%20%7C%20linux--x64%20%7C%20osx--x64%20%7C%20osx--arm64-lightgrey)
-[![NET](https://img.shields.io/badge/.NET_version-netstandard2.0%20%7C%20net6.0%20%7C%20net7.0%20%7C%20net8.0-blueviolet)](https://dotnet.microsoft.com/en-us/)
+[![NET](https://img.shields.io/badge/.NET_version-netstandard2.0%20%7C%20net6.0%20%7C%20net7.0%20%7C%20net8.0%20%7C%20net9.0-blueviolet)](https://dotnet.microsoft.com/en-us/)
 [![Release](https://img.shields.io/github/v/release/dxFeed/dxfeed-graal-net-api)](https://github.com/dxFeed/dxfeed-graal-net-api/releases/latest)
 [![Nuget](https://img.shields.io/badge/nuget-2.7.0-blue)](https://dxfeed.jfrog.io/artifactory/nuget-open/com/dxfeed/graal-net/)
 [![License](https://img.shields.io/badge/license-MPL--2.0-orange)](https://github.com/dxFeed/dxfeed-graal-net-api/blob/master/LICENSE)
@@ -72,7 +72,7 @@ To help you rewrite the existing API calls, we’ve prepared [samples](#samples)
 API and how several functionalities are implemented. More examples will follow. The table below shows the sample mapping
 between the old and new versions.
 
-Our support team on our [customer portal](https://jira.in.devexperts.com/servicedesk/customer/portal/1/create/122) is
+Our support team on our [customer portal](https://jira.in.devexperts.com/servicedesk/customer/portal/1) is
 ready to answer any questions and help with the transition.
 
 #### Sample Mapping
