@@ -1,3 +1,5 @@
+* [MDAPI-273] [.NET] Attempt to execute managed code after the .NET runtime thread state has been destroyed
+
 ## Version 2.7.0
 
 * [MDAPI-171] [.NET] Optimize OptionChainsBuilder for performance in .NET compared to Java
